# Data-Science-jobs-Market-Analyzer

./: .gitignore  README.md  analyzer.py  main.py  pyproject.toml
