[project]
name = "ds-jobs-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "requests>=2.32.5",
]
